Bug 156398 - Data Validation Input Message not see with Dark Mode
Summary: Data Validation Input Message not see with Dark Mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0.0.beta2 target:25.8.0
Keywords: bibisected, bisected, regression
: 154532 163915 (view as bug list)
Depends on:
Blocks: Cell-Validity Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2023-07-20 09:46 UTC by Timur
Modified: 2025-09-12 17:33 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Compaare MSO LO message (88.30 KB, image/png)
2023-07-20 09:46 UTC, Timur
Details
Sample XLSX (33.66 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2023-07-20 09:47 UTC, Timur
Details
Screenshot the area is showing the text (301.77 KB, image/png)
2023-07-20 10:00 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2023-07-20 09:46:54 UTC
Created attachment 188492 [details]
Compaare MSO LO message

Open attached XLSX that has Data Validation Input Message on A1 cell, which serves as overview/help for 1st time use, until clicked away.
See empty area in LO.
Seen with LO 24.2, I guess not implemented, did not check older versions.
Comment 1 Timur 2023-07-20 09:47:22 UTC
Created attachment 188493 [details]
Sample XLSX
Comment 2 m_a_riosv 2023-07-20 10:00:56 UTC
Created attachment 188494 [details]
Screenshot the area is showing the text

Show the text for me.
Comment 3 Timur 2023-07-20 10:19:47 UTC
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d74344f6cae0cf1c12f08249c8f49be1374fb98f
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

It is from 07.07.2023. as there are no recent Linux builds.
Seems this is Linux only, as I also see message in Windows.
Comment 4 raal 2023-07-20 19:56:24 UTC
No repro with Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 46d7119b8be03968017e59d882e5671350304e15
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 5 Aron Budea 2023-07-21 01:43:45 UTC
It is fine here with latest os 24.2 bibisect repo.
Timur, can you reproduce it with a 7.6 pre-release build?

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 46d7119b8be03968017e59d882e5671350304e15
CPU threads: 24; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 6 Timur 2023-07-21 08:07:57 UTC
Thank you all for testing. Also no repro on other Linux.
So this seems to be only with Dark theme, text is there but not seen.
Comment 7 stragu 2023-08-03 13:32:40 UTC
Reproduced on Ubuntu 20.04 with GNOME 3.36.8 in dark mode with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eef0c5d4d45ba35acfb6d8f7551fe565ca4badaa
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Text is there but very light colour on light yellow makes it barely visible.
Text is visible if I change my GNOME appearance settings to Light.

I already see the issue with OOo 3.3.
Comment 8 Gabor Kelemen (Collabora) 2024-12-16 12:29:11 UTC
*** Bug 163915 has been marked as a duplicate of this bug. ***
Comment 9 Gabor Kelemen (Collabora) 2024-12-16 14:54:32 UTC
This seems to have started in 7.4 with:

https://git.libreoffice.org/core/+/a3f400886768bf95fbd8e6b236e11d7aac393b96%5E%21

commit a3f400886768bf95fbd8e6b236e11d7aac393b96	[log]
author	Caolán McNamara <caolanm@redhat.com>	Sat Mar 12 20:38:21 2022 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Wed Mar 16 22:16:01 2022 +0100
tree 29d71aed9e5ca0e6045cac00aaba5e415acc53a5
parent 45f9c1862bd205f620ce21663a8cd91119b9b2d5 [diff]

Related: tdf#118320 enable some windows dark theme support

Before this commit the validation popup had black text on light yellow bg, after this it is white text on light yellow color.

One needs to set dark theme in Windows, and light theme in Application Colors to trigger this.
This has nothing to do with xlsx format, can be seen in the much simpler ODS example  attachment 197715 [details] from the duplicate bug.

Adding CC to: Caolán McNamara
Comment 10 Caolán McNamara 2024-12-17 21:08:55 UTC
That just really bisects to initial availability of some dark mode support on windows I feel and the problem exists before that on Linux/GTK where there was dark support before that.

This is sort of similar to tdf#51300 so presumably we can use the same foreground color as used there with this background color.

https://gerrit.libreoffice.org/c/core/+/178694 to use the same foreground/background color combination as used elsewhere with the notecolor background
Comment 11 Commit Notification 2024-12-18 08:21:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/7777f13cae57833b85627edb98060f97d5ffb053

Resolves: tdf#156398 use same color combination as used in tdf#51300

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-12-18 08:21:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3359b944fe3feab3fdc30aad3552c8ebb5ae886a

Resolves: tdf#156398 use same color combination as used in tdf#51300

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Timur 2025-09-12 17:33:33 UTC
*** Bug 154532 has been marked as a duplicate of this bug. ***