Resolves: tdf#156398 use same color combination as used in tdf#51300

so we don't get white text on yellow background

Change-Id: I346decaab293e2bb15c1110dfa61df5838607d79
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178694
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins