sc/source/ui/view/hintwin.cxx
@@ -38,11 +38,14 @@
 #define HINT_INDENT     3
 #define HINT_MARGIN     4
 
-ScOverlayHint::ScOverlayHint(OUString aTit, const OUString& rMsg, const Color& rColor, vcl::Font aFont)
-    : OverlayObject(rColor)
+ScOverlayHint::ScOverlayHint(OUString aTit, const OUString& rMsg,
+                             const Color& rBackColor, const Color& rTextColor,
+                             vcl::Font aFont)
+    : OverlayObject(rBackColor)
     , m_aTitle(std::move(aTit))
     , m_aMessage(convertLineEnd(rMsg, LINEEND_CR))
     , m_aTextFont(std::move(aFont))
+    , m_aTextColor(rTextColor)
     , m_aMapMode(MapUnit::MapPixel)
     , m_nLeft(0)
     , m_nTop(0)
@@ -57,8 +60,6 @@ drawinglayer::primitive2d::Primitive2DContainer ScOverlayHint::createOverlaySequ
     MapMode aOld = pDefaultDev->GetMapMode();
     pDefaultDev->SetMapMode(rMapMode);
 
-    const StyleSettings& rStyleSettings = Application::GetSettings().GetStyleSettings();
-    const Color& rColor = rStyleSettings.GetLabelTextColor();
     vcl::Font aTextFont = m_aTextFont;
     aTextFont.SetFontSize(pDefaultDev->PixelToLogic(aTextFont.GetFontSize(), rMapMode));
     vcl::Font aHeadFont = aTextFont;
@@ -84,7 +85,7 @@ drawinglayer::primitive2d::Primitive2DContainer ScOverlayHint::createOverlaySequ
         new drawinglayer::primitive2d::TextSimplePortionPrimitive2D(
                         aTextMatrix, m_aTitle, 0, m_aTitle.getLength(),
                         std::vector<double>(), {}, std::move(aFontAttr), css::lang::Locale(),
-                        rColor.getBColor());
+                        m_aTextColor.getBColor());
 
     Point aTextStart(nLeft + aHintMargin.Width() + aIndent.Width(),
                      nTop + aHintMargin.Height() + aFontMetric.GetLineHeight() + aIndent.Height());
@@ -125,7 +126,7 @@ drawinglayer::primitive2d::Primitive2DContainer ScOverlayHint::createOverlaySequ
                                         new drawinglayer::primitive2d::TextSimplePortionPrimitive2D(
                                                 aTextMatrix, aLine, 0, aLine.getLength(),
                                                 std::vector<double>(), {}, aFontAttr, css::lang::Locale(),
-                                                rColor.getBColor());
+                                                m_aTextColor.getBColor());
 
         rRange.expand(pMessage->getB2DRange(aDummy));
 
